--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = ">=2.0.0"
 urllib3 = ">=1.26.0"
 starlette = ">=0.27.0"
 sqlalchemy = "^2.0.39"
+cryptography = "^46.0.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
