--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ starlette = ">=0.27.0"
 sqlalchemy = "^2.0.39"
 cryptography = "^46.0.3"
 pydantic-settings = "^2.9.1"
-redis = ">=5.0.1,<6.0.0"
+redis = "^6.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
