--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tessera-sdk"
-version = "0.1.2"
+version = "0.1.3"
 description = "A Python SDK for Tessera with Identies integration, authentication middleware, and user onboarding"
 authors = ["ejankowski@gmail.com"]
 license = "MIT"
@@ -19,6 +19,7 @@ sqlalchemy = "^2.0.39"
 cryptography = "^46.0.3"
 pydantic-settings = "^2.9.1"
 redis = ">=5.0.1,<7"
+faststream = {extras = ["nats"], version = "^0.6.3"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
