--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ cryptography = "^46.0.3"
 pydantic-settings = "^2.9.1"
 redis = ">=5.0.1,<7"
 faststream = {extras = ["nats"], version = "^0.6.3"}
+jinja2 = "^3.1.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
