--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ ruff = "^0.11.6"
 isort = ">=5.0.0"
 mypy = ">=1.0.0"
 types-requests = ">=2.28.0"
+httpx = "^0.28.1"
+fastapi = "^0.115.6"
 
 [tool.poetry.urls]
 homepage = "https://github.com/tesserahq/tessera-sdk-py"
