--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ mypy = ">=1.0.0"
 types-requests = ">=2.28.0"
 httpx = "^0.28.1"
 fastapi = "^0.115.6"
+pyjwt = "^2.10.1"
 
 [tool.poetry.urls]
 homepage = "https://github.com/tesserahq/tessera-sdk-py"
