--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ jinja2 = "^3.1.6"
 
 opentelemetry-sdk = "^1.39.1"
 opentelemetry-instrumentation-sqlalchemy = "^0.60b1"
+opentelemetry-instrumentation-faststream = "^0.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
